2010-04-12  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Anders Carlsson.

        Fixed complexity and performance FIXME created by using KURL in the UI
        process -- it turned out that everywhere we were using KURL, we could
        have just used String instead. (That's how Windows WebKit works, too.)

        I kept WKURLRef and WKStringRef distinct opaque types in the API for now,
        though, since there may be profit in changing their backing stores in the
        future, and it's nice for the API to encode a difference between generic
        strings and strings that are valid, canonical URLs.

        * Shared/KURLWrapper.h: Removed. Yay!

        * Shared/WebCoreTypeArgumentMarshalling.h: Nixed KURL marshalling functions.
        Old callers marshal Strings now, instead. (This is what KURL was doing
        under the covers, anyway.)

        * UIProcess/API/C/WKAPICast.h:
        (toWK): Backed by StringImpl* now.
        (toURLRef): Added a disambiguating function for specifying that you want
        a WKURLRef, since StringImpl* converts to WKStringRef by default.

        * UIProcess/API/C/WKFrame.cpp:
        (WKFrameGetProvisionalURL):
        (WKFrameGetURL):
        * UIProcess/API/C/WKPage.cpp:
        (WKPageLoadURL):
        * UIProcess/API/C/WKURL.cpp:
        * UIProcess/API/C/cf/WKURLCF.cpp:
        (WKURLCreateWithCFURL):
        (WKURLCopyCFURL):
        * UIProcess/WebFrameProxy.cpp:
        (WebKit::WebFrameProxy::didStartProvisionalLoad):
        (WebKit::WebFrameProxy::didCommitLoad):
        * UIProcess/WebFrameProxy.h:
        (WebKit::WebFrameProxy::url):
        (WebKit::WebFrameProxy::provisionalURL):
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::loadURL):
        (WebKit::WebPageProxy::didReceiveMessage):
        (WebKit::WebPageProxy::didStartProvisionalLoadForFrame):
        (WebKit::WebPageProxy::decidePolicyForNavigationAction):